@@ -12,6 +12,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
@@ -96,11 +97,11 @@ public class AuthServlet extends HttpServlet {
 		} catch (Exception e) {
 			LOGGER.error("Failed to redirect to Google OAuth: {}", e.getMessage(), e);
 			response.sendRedirect(request.getContextPath() + "/auth?error=" +
-					java.net.URLEncoder.encode("Failed to initialize Google login", "UTF-8"));
+					java.net.URLEncoder.encode("Failed to initialize Google login", StandardCharsets.UTF_8));
 		}
 	}
 
-	private void handleGoogleCallback(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+	private void handleGoogleCallback(HttpServletRequest request, HttpServletResponse response) throws IOException {
 		String code = request.getParameter("code");
 		String error = request.getParameter("error");
 		String state = request.getParameter("state");
@@ -108,21 +109,21 @@ public class AuthServlet extends HttpServlet {
 		if (error != null) {
 			LOGGER.warn("Google OAuth error: {}", error);
 			response.sendRedirect(request.getContextPath() + "/auth?error=" +
-					java.net.URLEncoder.encode("Google authentication was cancelled or failed", "UTF-8"));
+					java.net.URLEncoder.encode("Google authentication was cancelled or failed", StandardCharsets.UTF_8));
 			return;
 		}
 
 		if (code == null || code.trim().isEmpty()) {
 			LOGGER.warn("Google OAuth callback received without authorization code");
 			response.sendRedirect(request.getContextPath() + "/auth?error=" +
-					java.net.URLEncoder.encode("Invalid Google authentication response", "UTF-8"));
+					java.net.URLEncoder.encode("Invalid Google authentication response", StandardCharsets.UTF_8));
 			return;
 		}
 
 		if (!"zust-auth".equals(state)) {
 			LOGGER.warn("Google OAuth state mismatch. Expected: zust-auth, Received: {}", state);
 			response.sendRedirect(request.getContextPath() + "/auth?error=" +
-					java.net.URLEncoder.encode("Invalid authentication state", "UTF-8"));
+					java.net.URLEncoder.encode("Invalid authentication state", StandardCharsets.UTF_8));
 			return;
 		}
 
@@ -132,23 +133,23 @@ public class AuthServlet extends HttpServlet {
 				request.getSession().setAttribute("loggedInAccount", account);
 				request.getSession().setAttribute("users", account);
 				LOGGER.info("Google OAuth successful for user: {}", account.getEmail());
-				response.sendRedirect(request.getContextPath() + "/post");
+				response.sendRedirect(request.getContextPath() + "/");
 			} else {
 				LOGGER.error("Google OAuth failed - no account returned");
 				response.sendRedirect(request.getContextPath() + "/auth?error=" +
-						java.net.URLEncoder.encode("Failed to authenticate with Google", "UTF-8"));
+						java.net.URLEncoder.encode("Failed to authenticate with Google", StandardCharsets.UTF_8));
 			}
 		} catch (Exception e) {
 			LOGGER.error("Google OAuth error: {}", e.getMessage(), e);
 			response.sendRedirect(request.getContextPath() + "/auth?error=" +
-					java.net.URLEncoder.encode("Google authentication failed: " + e.getMessage(), "UTF-8"));
+					java.net.URLEncoder.encode("Google authentication failed: " + e.getMessage(), StandardCharsets.UTF_8));
 		}
 	}
 
 	private void handleLogin(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		String username = request.getParameter("username");
 		String password = request.getParameter("password");
-		String errorMessage = null;
+		String errorMessage;
 
 		if (username == null || username.trim().isEmpty() || password == null || password.trim().isEmpty()) {
 			errorMessage = "Username and password cannot be empty.";
@@ -164,15 +165,7 @@ public class AuthServlet extends HttpServlet {
 					if (loggedInAccount != null) {
 						request.getSession().setAttribute("loggedInAccount", loggedInAccount);
 						request.getSession().setAttribute("users", loggedInAccount);
-						if (loggedInAccount.getAccountRole().equals("admin"))
-						{
-							request.getSession().setAttribute("isAdmin", true);
-							response.sendRedirect(request.getContextPath() + "/admin");
-							Cookie cookie = new Cookie("users", "true");
-							cookie.setMaxAge(60 * 60 * 24 * 3);
-							cookie.setAttribute("users_account", loggedInAccount.toString());
-						}
-						response.sendRedirect(request.getContextPath() + "/post");
+						response.sendRedirect(request.getContextPath() + "/");
 						return;
 					} else {
 						errorMessage = "Login successful but could not retrieve account details.";
@@ -208,8 +201,8 @@ public class AuthServlet extends HttpServlet {
 	private void handleRegistration(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		Account account = new Account();
 		String errorMessage = null;
-		String successMessage = null;
-		String avatarSavedPath = null;
+		String successMessage;
+		String avatarSavedPath;
 
 		try {
 			account.setUsername(request.getParameter("username"));
@@ -232,7 +225,7 @@ public class AuthServlet extends HttpServlet {
 					if (dotIndex > 0 && dotIndex < submittedFileName.length() - 1) {
 						fileExtension = submittedFileName.substring(dotIndex);
 					}
-					String uniqueFileName = UUID.randomUUID().toString() + fileExtension;
+					String uniqueFileName = UUID.randomUUID() + fileExtension;
 
 					try (InputStream fileContent = avatarPart.getInputStream()) {
 						avatarSavedPath = fileService.saveFile(uniqueFileName, fileContent);
@@ -264,7 +257,7 @@ public class AuthServlet extends HttpServlet {
 
 			authDAO.registerAccount(account);
 			successMessage = "Registration successful! A verification email has been sent to " + account.getEmail() + ". Please check your inbox.";
-			response.sendRedirect(request.getContextPath() + "/auth?successMessage=" + java.net.URLEncoder.encode(successMessage, "UTF-8"));
+			response.sendRedirect(request.getContextPath() + "/auth?successMessage=" + java.net.URLEncoder.encode(successMessage, StandardCharsets.UTF_8));
 			return;
 
 		} catch (IllegalArgumentException e) {
